k8s/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: turinghatch
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 9559
      name: http
  type: ClusterIP
